# olmo-instruct

./: README.md  pyproject.toml
configs/: dpo_config.yaml  rlvr_config.yaml  sft_config.yaml
data/: bamboo_dpo.jsonl  bamboo_rlvr.jsonl  bamboo_train.jsonl  inis_dpo.jsonl  inis_rlvr.jsonl  inis_train.jsonl
evaluation/: __init__.py  ibis_evaluator.py  verifier.py
scripts/: train_dpo.sh  train_rlvr.sh  train_sft.sh
