[project]
name = "olmo-instruct"
version = "0.1.0"
description = "OLMo fine-tuning for INIS and Bamboo (Ibis) domains"
requires-python = ">=3.10"
dependencies = [
    "ibis-framework[duckdb]>=9.0.0",
    "jsonlines>=4.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
train = [
    "torch>=2.2.0",
    "accelerate>=0.28.0",
    "wandb>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
